--- a/foundation.css
+++ b/foundation.css
@@ -93,7 +93,7 @@ a:hover{ background-color:white;
              height:30px;
              background-color:red;
              border:thin solid transparent;}
-    body{background:url("laptop_img.jpg");
+    body{background:url("laptop_img.jpg") 100% auto;
         }
     .satya{
            color:white;
