--- a/foundation.css
+++ b/foundation.css
@@ -94,7 +94,7 @@ a:hover{ background-color:white;
              background-color:red;
              border:thin solid transparent;}
      body{
-           background-color:black;
+           background:url("lapyop_img.jpg");
          }
     .satya{
            color:white;
