--- a/foundation.css
+++ b/foundation.css
@@ -1,4 +1,8 @@
-*{margin:0;
+*{
+  box-sizing:border-box;
+}
+*{
+  margin:0;
   padding:0;
 }
 header{background-color: transparent;
@@ -94,7 +98,7 @@ a:hover{ background-color:white;
              background-color:red;
              border:thin solid transparent;}
     body{background:url("laptop_img.jpg");
-         width:100%;
+        max-width:100%;
          height:auto;
         }
     .satya{
