--- a/foundation.css
+++ b/foundation.css
@@ -96,7 +96,7 @@ a:hover{ background-color:white;
              background-color:red;
              border:thin solid transparent;}
     body{background:url("laptop_img.jpg");
-        max-width:100%;
+        width:100%;
          height:auto;
         }
     .satya{
