--- a/foundation.css
+++ b/foundation.css
@@ -109,4 +109,8 @@ a:hover{ background-color:white;
            text-decoration:none;
            color:white
            }
+    #active {
+           background-color :white;
+           color:black;
+    }    
     #login , #signup{display:none;}
